--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 MBTI[[:space:]]500.csv filter=lfs diff=lfs merge=lfs -text
+MBTI500.csv filter=lfs diff=lfs merge=lfs -text
